move mixin refmap registration to gradle.properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,3 +9,4 @@ archives_base_name = TemplateMod
 
 # Mixin properties
 mixin_config = template.mixin.json
+mixin_refmap = template.mixin-refmap.json
